--- a/index.html
+++ b/index.html
@@ -18,22 +18,27 @@
 				<li data-i18n="lang.en">EN</li>
 			</ul>	
 		<!-- end lang --></div>
-		<div id="admin" data-i18n="menu.admin"><a href="login.html">Login</a></div>
+		<div id="admin" data-i18n="menu.admin"><a href="admin.html">Login</a></div>
 	<!-- end header --></div>
 	<div id="container">
 		<div id="menu">
 			<!--<b data-i18n="menu.title">Portraits</b>-->
 			<ul>
-				<li data-i18n="menu.sections">All</li>
-				<li data-i18n="menu.section3">Contact</li>
+				<li data-i18n="menu.sections"><a href="#all">All</a></li>
+				<li data-i18n="menu.section3"><a href="contact.html">Contact</a></li>
 			</ul>
 		<!-- end menu --></div>
 		<div id="content">
 			<div id="title">Women</div>
 			<div id="gallery">
 				<div id="load"></div>
-				<div style="clear:both;height:0;width:0"></div>
-			</div>
+				<div style="clear:both;"></div>
+			<!-- end gallery --></div>
+			<div id="gallery_bar">
+				<div id="name">...</div>
+				<div id="prev">&#60;</div>
+				<div id="next">&#62;</div>
+			<!-- end gallery_bar --></div>
 		<!-- end content --></div>
 		<div style="clear:both;"></div>
 	<!-- end container --></div>
