--- a/index.html
+++ b/index.html
@@ -11,37 +11,24 @@
 </head>
 <body>
 	<div id="header">
-		<div id="logo" title="logo" data-i18n="menu.logo">Maxime Photographe</div>
-		<div id="lang">
-			<span data-i18n="lang.fr">FR</span>
-			<ul>
-				<li data-i18n="lang.en">EN</li>
-			</ul>	
-		<!-- end lang --></div>
-		<div id="admin" data-i18n="menu.admin"><a href="admin.html">Login</a></div>
+		<div id="logo" title="logo" data-i18n="menu.logo">Maxime Stephanovitch</div>
 	<!-- end header --></div>
 	<div id="container">
 		<div id="menu">
 			<!--<b data-i18n="menu.title">Portraits</b>-->
 			<ul>
-				<li data-i18n="menu.sections"><a href="#all">All</a></li>
-				<li data-i18n="menu.section3"><a href="contact.html">Contact</a></li>
+				<li></li>
 			</ul>
 		<!-- end menu --></div>
 		<div id="content">
-			<div id="title">Women</div>
 			<div id="gallery">
 				<div id="load"></div>
 				<div style="clear:both;"></div>
 			<!-- end gallery --></div>
-			<div id="gallery_bar">
-				<div id="name">...</div>
-				<div id="prev">&#60;</div>
-				<div id="next">&#62;</div>
-			<!-- end gallery_bar --></div>
 		<!-- end content --></div>
 		<div style="clear:both;"></div>
 	<!-- end container --></div>
+	<footer></footer><!-- a verifier -->
 </body>
 <script src="js/gallery.js"></script>
 </html>
