[new] api structure + add should work + admin interface on same page as gallery

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 		<div id="menu">
 			<!--<b data-i18n="menu.title">Portraits</b>-->
 			<ul>
-				<li></li>
 			</ul>
 		<!-- end menu --></div>
 		<div id="content">
@@ -29,6 +28,16 @@
 		<div style="clear:both;"></div>
 	<!-- end container --></div>
 	<footer></footer><!-- a verifier -->
+	<form id="logbox">
+		<button id="close">X</button>
+	  <fieldset>
+	    <legend>Administration</legend>
+			<input id="login" type="text" name="login" placeholder="Login"/>
+			<input id="password" type="password" name="password" placeholder="Password" />
+			<button id="connect">Login</button>
+		</fieldset>
+	<!-- end logbox --></form>
 </body>
+<script src="js/admin.js"></script>
 <script src="js/gallery.js"></script>
 </html>
