--- a/index.html
+++ b/index.html
@@ -10,21 +10,41 @@
 	<link href="css/portrait.css" rel="stylesheet" type="text/css" media="only screen and (max-width:720px)" />
 </head>
 <body>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/fr_FR/all.js#xfbml=1&appId=405747459487893";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 	<div id="header">
-		<div id="logo" title="logo" data-i18n="menu.logo">Maxime Stephanovitch</div>
+		<div id="logo" title="logo">Maxime Stephanovitch</div>
+		<div id="contact"><a href="contact.html">Contact</a></div>
 	<!-- end header --></div>
 	<div id="container">
 		<div id="menu">
-			<!--<b data-i18n="menu.title">Portraits</b>-->
 			<ul>
 			</ul>
 		<!-- end menu --></div>
 		<div id="content">
 			<div id="gallery">
-				<div id="load"></div>
+				<div id="load">
+					<div id="loader">
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+					<!-- end loader --></div>
+				<!-- end load --></div>
 				<div style="clear:both;"></div>
 			<!-- end gallery --></div>
 		<!-- end content --></div>
+			<div class="fb-like" data-href="http://www.facebook.com/MaximeStephanovitchFotographia" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
 		<div style="clear:both;"></div>
 	<!-- end container --></div>
 	<footer></footer><!-- a verifier -->
