--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
 <script src="js/api.js"></script>
 <script src="js/admin.js"></script>
 <script src="js/gallery.js"></script>
-<script>(function(d, s, id) {
+<script>
+(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/fr_FR/all.js#xfbml=1&appId=405747459487893";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));
+</script>
 </html>
