[new] favicon [replacement] loader for better perf/ compatibility

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<title>Maxime Photographe</title>
 	<link href="css/landscape.css" rel="stylesheet" type="text/css" />
 	<link href="css/portrait.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)" />
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 </head>
 <body>
 	<div id="fb-root"></div>
@@ -23,16 +25,7 @@
 		<div id="content" class="shadow">
 			<div id="gallery">
 				<div id="load">
-					<div id="loader">
-						<div></div>
-						<div></div>
-						<div></div>
-						<div></div>
-						<div></div>
-						<div></div>
-						<div></div>
-						<div></div>
-					<!-- end loader --></div>
+					<div></div>
 				<!-- end load --></div>
 				<div style="clear:both;"></div>
 			<!-- end gallery --></div>
