--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div id="fb-root"></div>
 	<div id="header">
 		<div id="logo" title="logo">Maxime Stephanovitch</div>
-		<div id="contact"><a href="contact.html">Contact</a></div>
+		<div class="fb-like" data-href="http://www.facebook.com/MaximeStephanovitchFotographia" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
 	<!-- end header --></div>
 	<div id="container">
 		<div id="menu">
@@ -30,10 +30,9 @@
 				<div style="clear:both;"></div>
 			<!-- end gallery --></div>
 		<!-- end content --></div>
-			<div style="clear:both;"></div>
-			<div class="fb-like" data-href="http://www.facebook.com/MaximeStephanovitchFotographia" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+		<div style="clear:both;"></div>
 	<!-- end container --></div>
-	<footer></footer><!-- a verifier -->
+	<footer><a href="mailto:maxime.stephanovitch[at]gmail.com">maxime.stephanovitch[at]gmail.com</a></footer><!-- a verifier -->
 	<form id="logbox" class="remove">
 	  <fieldset>
 	    <legend>Administration</legend>
