demo version with few fixes and fullscreen option by double click on image

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		</fieldset>
 		<button id="close">X</button>
 	<!-- end logbox --></form>
+	<div id="fullscreen" class="remove"></div>
 </body>
 <script src="js/api.js"></script>
 <script src="js/admin.js"></script>
