--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- end menu --></div>
 		<div id="content" class="shadow">
 			<div id="gallery">
-				<div id="load">
+				<div class="load">
 					<div></div>
 				<!-- end load --></div>
 				<div style="clear:both;"></div>
