tried to fix scroll position change weirdly when image is added to gallery, preload was continuing even if we d change section, sometimes the same image could repeat

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- end content --></div>
 		<div style="clear:both;"></div>
 	<!-- end container --></div>
-	<footer><a id="email" href="mailto:maxime.stephanovitch[at]gmail.com"></a></footer><!-- a verifier -->
+	<footer><a id="email" href="mailto:maxime.stephanovitch[at]gmail.com"></a></footer>
 	<form id="logbox" class="remove">
 	  <fieldset>
 	    <legend>Administration</legend>
@@ -75,4 +75,8 @@ gallery({
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
+<!--
+ Made by Zougi for Maximestephanovitch.com
+		https://github.com/Zougi/MaxPhotographer
+-->
 </html>
