[add] google analytics

--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@ gallery({
   js.src = "//connect.facebook.net/fr_FR/all.js#xfbml=1&appId=405747459487893";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
+
+//google analytics
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-38794563-1']);
+_gaq.push(['_setDomainName', 'maximestephanovitch.com']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+
 </script>
 <!--
  Made by Zougi for Maximestephanovitch.com
