[fix] google analytics script moved from body to head

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 	<link href="css/portrait.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)" />
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
+	<script>
+		//google analytics
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-38794563-1']);
+		_gaq.push(['_setDomainName', 'maximestephanovitch.com']);
+		_gaq.push(['_trackPageview']);
+
+		(function() {
+		  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
 </head>
 <body>
 	<div id="fb-root"></div>
@@ -74,19 +87,6 @@ gallery({
   js.src = "//connect.facebook.net/fr_FR/all.js#xfbml=1&appId=405747459487893";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
-
-//google analytics
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-38794563-1']);
-_gaq.push(['_setDomainName', 'maximestephanovitch.com']);
-_gaq.push(['_trackPageview']);
-
-(function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-
 </script>
 <!--
  Made by Zougi for Maximestephanovitch.com
