fix image minimum px was not respected. we could see it only when a zoom of the page was triggered by the user

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div id="gallery">
 				<div id="load_gallery" class="load">
 					<div></div>
-				<!-- end load --></div>
+				<!-- end load_gallery --></div>
 				<div style="clear:both;"></div>
 			<!-- end gallery --></div>
 		<!-- end content --></div>
@@ -55,7 +55,11 @@
 		</fieldset>
 		<button id="close">X</button>
 	<!-- end logbox --></form>
-	<div id="fullscreen" class="remove"></div>
+	<div id="fullscreen" class="remove">
+		<div id="load_fullscreen" class="load add">
+			<div></div>
+		<!-- end load --></div>
+	</div>
 </body>
 <script src="js/gallery.min.js"></script>
 <script>
