logbox & fullscreen div are now fragments + escape key now quits fullscreen

--- a/index.html
+++ b/index.html
@@ -31,37 +31,15 @@
 		<div class="fb-like" data-href="http://www.facebook.com/MaximeStephanovitchFotographia" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
 	<!-- end header --></div>
 	<div id="container">
-		<div id="menu">
-			<ul>
-			</ul>
-		<!-- end menu --></div>
+		<div id="menu"></div>
 		<div id="content" class="shadow">
-			<div id="gallery">
-				<div id="load_gallery" class="load">
-					<div></div>
-				<!-- end load_gallery --></div>
-				<div style="clear:both;"></div>
-			<!-- end gallery --></div>
+			<div id="gallery"></div>
 		<!-- end content --></div>
 		<div style="clear:both;"></div>
 	<!-- end container --></div>
 	<footer><a id="email" href="mailto:maxime.stephanovitch[at]gmail.com"></a></footer>
-	<form id="logbox" class="remove">
-	  <fieldset>
-	    <legend>Administration</legend>
-			<input id="login" type="text" name="login" placeholder="Login"/>
-			<input id="password" type="password" name="password" placeholder="Password" />
-			<button id="connect">Login</button>
-		</fieldset>
-		<button id="close">X</button>
-	<!-- end logbox --></form>
-	<div id="fullscreen" class="remove">
-		<div id="load_fullscreen" class="load add">
-			<div></div>
-		<!-- end load --></div>
-	</div>
 </body>
-<script src="js/gallery.min.js"></script>
+<script src="js/gallery.js"></script>
 <script>
 //gallery component
 gallery({
