--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<title>Maxime Photographe</title>
 	<link href="css/landscape.css" rel="stylesheet" type="text/css" />
 	<link href="css/portrait.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)" />
+	<link href="css/gallery.landscape.css" rel="stylesheet" type="text/css" />
+	<link href="css/gallery.portrait.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)" />
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 	<script>
