New readme + new pass/login + issues fix

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ gallery({
 	fullscreen: true,
 	drag: true,
 	responsive: true,
-	remember_scroll_position: true,
+	remember_scroll_position: false,
 	min_height: 540,
 	max_height: 1024,
 	auto_fit: true
