--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<!-- end container --></div>
 	<footer><a id="email" href="mailto:maxime.stephanovitch[at]gmail.com"></a></footer>
 </body>
-<script src="js/gallery.js"></script>
+<script src="js/gallery.min.js"></script>
 <script>
 //gallery component
 gallery({
